cmake_minimum_required(VERSION 3.8)
project(JD)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)
include_directories(src)
include_directories(src/article)
include_directories(src/bbslist)
include_directories(src/board)
include_directories(src/config)
include_directories(src/control)
include_directories(src/dbimg)
include_directories(src/dbtree)
include_directories(src/history)
include_directories(src/icons)
include_directories(src/image)
include_directories(src/jdlib)
include_directories(src/message)
include_directories(src/skeleton)
include_directories(src/sound)
include_directories(src/xml)
include_directories(/usr/include/glibmm-2.4)
include_directories(/usr/lib64/glibmm-2.4/include)
include_directories(/usr/include/glib-2.0)
include_directories(/usr/lib64/glib-2.0/include)
include_directories(/usr/include/sigc++-2.0)
include_directories(/usr/lib64/sigc++-2.0/include)
include_directories(/usr/include/gtkmm-2.4)
include_directories(/usr/include/giomm-2.4)
include_directories(/usr/lib64/giomm-2.4/include)
include_directories(/usr/include/gdkmm-2.4)
include_directories(/usr/include/gtk-2.0)
include_directories(/usr/lib64/gtk-2.0/include)
include_directories(/usr/include/pango-1.0)
include_directories(/usr/include/cairo)
include_directories(/usr/include/gdk-pixbuf-2.0)
include_directories(/usr/lib64/gdkmm-2.4/include)
include_directories(/usr/lib64/pangomm-1.4/include)
include_directories(/usr/include/cairomm-1.0)
include_directories(/usr/include/freetype2)
include_directories(/usr/include/pangomm-1.4)
include_directories(/usr/include/atk-1.0)
include_directories(/usr/lib64/gtkmm-2.4/include)
include_directories(/usr/include/atkmm-1.6)

add_executable(JD
        src/article/articleadmin.cpp
        src/article/articleadmin.h
        src/article/articleview.cpp
        src/article/articleview.h
        src/article/articleviewbase.cpp
        src/article/articleviewbase.h
        src/article/articleviewetc.cpp
        src/article/articleviewetc.h
        src/article/articleviewinfo.cpp
        src/article/articleviewinfo.h
        src/article/articleviewpopup.cpp
        src/article/articleviewpopup.h
        src/article/articleviewpreview.cpp
        src/article/articleviewpreview.h
        src/article/articleviewsearch.cpp
        src/article/articleviewsearch.h
        src/article/caret.h
        src/article/drawareabase.cpp
        src/article/drawareabase.h
        src/article/drawareainfo.cpp
        src/article/drawareainfo.h
        src/article/drawareamain.cpp
        src/article/drawareamain.h
        src/article/drawareapopup.cpp
        src/article/drawareapopup.h
        src/article/embeddedimage.cpp
        src/article/embeddedimage.h
        src/article/font.cpp
        src/article/font.h
        src/article/layouttree.cpp
        src/article/layouttree.h
        src/article/preference.cpp
        src/article/preference.h
        src/article/scrollinfo.h
        src/article/toolbar.cpp
        src/article/toolbar.h
        src/article/toolbarsearch.cpp
        src/article/toolbarsearch.h
        src/article/toolbarsimple.cpp
        src/article/toolbarsimple.h
        src/bbslist/addetcdialog.cpp
        src/bbslist/addetcdialog.h
        src/bbslist/bbslistadmin.cpp
        src/bbslist/bbslistadmin.h
        src/bbslist/bbslistview.cpp
        src/bbslist/bbslistview.h
        src/bbslist/bbslistviewbase.cpp
        src/bbslist/bbslistviewbase.h
        src/bbslist/columns.cpp
        src/bbslist/columns.h
        src/bbslist/editlistwin.cpp
        src/bbslist/editlistwin.h
        src/bbslist/favoriteview.cpp
        src/bbslist/favoriteview.h
        src/bbslist/historyview.cpp
        src/bbslist/historyview.h
        src/bbslist/selectdialog.cpp
        src/bbslist/selectdialog.h
        src/bbslist/selectlistview.cpp
        src/bbslist/selectlistview.h
        src/bbslist/toolbar.cpp
        src/bbslist/toolbar.h
        src/board/boardadmin.cpp
        src/board/boardadmin.h
        src/board/boardview.cpp
        src/board/boardview.h
        src/board/boardviewbase.cpp
        src/board/boardviewbase.h
        src/board/boardviewlog.cpp
        src/board/boardviewlog.h
        src/board/boardviewnext.cpp
        src/board/boardviewnext.h
        src/board/boardviewsidebar.cpp
        src/board/boardviewsidebar.h
        src/board/columns.h
        src/board/preference.cpp
        src/board/preference.h
        src/board/toolbar.cpp
        src/board/toolbar.h
        src/config/aboutconfig.cpp
        src/config/aboutconfig.h
        src/config/aboutconfigdiag.cpp
        src/config/aboutconfigdiag.h
        src/config/configitems.cpp
        src/config/configitems.h
        src/config/defaultconf.h
        src/config/globalconf.cpp
        src/config/globalconf.h
        src/control/buttonconfig.cpp
        src/control/buttonconfig.h
        src/control/buttonpref.cpp
        src/control/buttonpref.h
        src/control/control.cpp
        src/control/control.h
        src/control/controlid.h
        src/control/controllabel.h
        src/control/controlutil.cpp
        src/control/controlutil.h
        src/control/defaultconf.h
        src/control/get_config.h
        src/control/keyconfig.cpp
        src/control/keyconfig.h
        src/control/keypref.cpp
        src/control/keypref.h
        src/control/keysyms.h
        src/control/mouseconfig.cpp
        src/control/mouseconfig.h
        src/control/mousekeyconf.cpp
        src/control/mousekeyconf.h
        src/control/mousekeyitem.h
        src/control/mousekeypref.cpp
        src/control/mousekeypref.h
        src/control/mousepref.cpp
        src/control/mousepref.h
        src/dbimg/delimgcachediag.cpp
        src/dbimg/delimgcachediag.h
        src/dbimg/delimgdiag.h
        src/dbimg/img.cpp
        src/dbimg/img.h
        src/dbimg/imginterface.cpp
        src/dbimg/imginterface.h
        src/dbimg/imgroot.cpp
        src/dbimg/imgroot.h
        src/dbtree/article2ch.cpp
        src/dbtree/article2ch.h
        src/dbtree/article2chcompati.cpp
        src/dbtree/article2chcompati.h
        src/dbtree/articlebase.cpp
        src/dbtree/articlebase.h
        src/dbtree/articlehash.cpp
        src/dbtree/articlehash.h
        src/dbtree/articlejbbs.cpp
        src/dbtree/articlejbbs.h
        src/dbtree/articlelocal.cpp
        src/dbtree/articlelocal.h
        src/dbtree/articlemachi.cpp
        src/dbtree/articlemachi.h
        src/dbtree/board2ch.cpp
        src/dbtree/board2ch.h
        src/dbtree/board2chcompati.cpp
        src/dbtree/board2chcompati.h
        src/dbtree/boardbase.cpp
        src/dbtree/boardbase.h
        src/dbtree/boardfactory.cpp
        src/dbtree/boardfactory.h
        src/dbtree/boardjbbs.cpp
        src/dbtree/boardjbbs.h
        src/dbtree/boardlocal.cpp
        src/dbtree/boardlocal.h
        src/dbtree/boardmachi.cpp
        src/dbtree/boardmachi.h
        src/dbtree/etcboardinfo.h
        src/dbtree/interface.cpp
        src/dbtree/interface.h
        src/dbtree/node.h
        src/dbtree/nodetree2ch.cpp
        src/dbtree/nodetree2ch.h
        src/dbtree/nodetree2chcompati.cpp
        src/dbtree/nodetree2chcompati.h
        src/dbtree/nodetreebase.cpp
        src/dbtree/nodetreebase.h
        src/dbtree/nodetreedummy.cpp
        src/dbtree/nodetreedummy.h
        src/dbtree/nodetreejbbs.cpp
        src/dbtree/nodetreejbbs.h
        src/dbtree/nodetreelocal.cpp
        src/dbtree/nodetreelocal.h
        src/dbtree/nodetreemachi.cpp
        src/dbtree/nodetreemachi.h
        src/dbtree/root.cpp
        src/dbtree/root.h
        src/dbtree/ruleloader.cpp
        src/dbtree/ruleloader.h
        src/dbtree/settingloader.cpp
        src/dbtree/settingloader.h
        src/dbtree/spchar_decoder.cpp
        src/dbtree/spchar_decoder.h
        src/dbtree/spchar_tbl.h
        src/history/historymanager.cpp
        src/history/historymanager.h
        src/history/historymenu.cpp
        src/history/historymenu.h
        src/history/historysubmenu.cpp
        src/history/historysubmenu.h
        src/history/viewhistory.cpp
        src/history/viewhistory.h
        src/history/viewhistoryitem.h
        src/icons/iconfiles.h
        src/icons/iconid.h
        src/icons/iconmanager.cpp
        src/icons/iconmanager.h
        src/image/imageadmin.cpp
        src/image/imageadmin.h
        src/image/imagearea.cpp
        src/image/imagearea.h
        src/image/imageareabase.cpp
        src/image/imageareabase.h
        src/image/imageareaicon.cpp
        src/image/imageareaicon.h
        src/image/imageareapopup.cpp
        src/image/imageareapopup.h
        src/image/imageview.cpp
        src/image/imageview.h
        src/image/imageviewbase.cpp
        src/image/imageviewbase.h
        src/image/imageviewicon.cpp
        src/image/imageviewicon.h
        src/image/imageviewpopup.cpp
        src/image/imageviewpopup.h
        src/image/imagewin.cpp
        src/image/imagewin.h
        src/image/preference.cpp
        src/image/preference.h
        src/jdlib/confloader.cpp
        src/jdlib/confloader.h
        src/jdlib/constptr.h
        src/jdlib/hash_set.cpp
        src/jdlib/hash_set.h
        src/jdlib/heap.cpp
        src/jdlib/heap.h
        src/jdlib/hkana.h
        src/jdlib/imgloader.cpp
        src/jdlib/imgloader.h
        src/jdlib/jdiconv.cpp
        src/jdlib/jdiconv.h
        src/jdlib/jdmigemo.cpp
        src/jdlib/jdmigemo.h
        src/jdlib/jdregex.cpp
        src/jdlib/jdregex.h
        src/jdlib/jdthread.cpp
        src/jdlib/jdthread.h
        src/jdlib/loader.cpp
        src/jdlib/loader.h
        src/jdlib/loaderdata.cpp
        src/jdlib/loaderdata.h
        src/jdlib/misccharcode.cpp
        src/jdlib/misccharcode.h
        src/jdlib/miscgtk.cpp
        src/jdlib/miscgtk.h
        src/jdlib/miscmsg.cpp
        src/jdlib/miscmsg.h
        src/jdlib/misctime.cpp
        src/jdlib/misctime.h
        src/jdlib/misctrip.cpp
        src/jdlib/misctrip.h
        src/jdlib/miscutil.cpp
        src/jdlib/miscutil.h
        src/jdlib/miscx.cpp
        src/jdlib/miscx.h
        src/jdlib/refptr_lock.h
        src/jdlib/ssl.cpp
        src/jdlib/ssl.h
        src/jdlib/tfidf.cpp
        src/jdlib/tfidf.h
        src/jdlib/timeout.cpp
        src/jdlib/timeout.h
        src/message/confirmdiag.cpp
        src/message/confirmdiag.h
        src/message/logitem.h
        src/message/logmanager.cpp
        src/message/logmanager.h
        src/message/messageadmin.cpp
        src/message/messageadmin.h
        src/message/messageview.cpp
        src/message/messageview.h
        src/message/messageviewbase.cpp
        src/message/messageviewbase.h
        src/message/messagewin.cpp
        src/message/messagewin.h
        src/message/post.cpp
        src/message/post.h
        src/message/toolbar.cpp
        src/message/toolbar.h
        src/skeleton/aamenu.cpp
        src/skeleton/aamenu.h
        src/skeleton/aboutdiag.cpp
        src/skeleton/aboutdiag.h
        src/skeleton/admin.cpp
        src/skeleton/admin.h
        src/skeleton/backforwardbutton.cpp
        src/skeleton/backforwardbutton.h
        src/skeleton/compentry.cpp
        src/skeleton/compentry.h
        src/skeleton/detaildiag.cpp
        src/skeleton/detaildiag.h
        src/skeleton/dispatchable.cpp
        src/skeleton/dispatchable.h
        src/skeleton/dragnote.cpp
        src/skeleton/dragnote.h
        src/skeleton/dragtreeview.cpp
        src/skeleton/dragtreeview.h
        src/skeleton/editcolumns.cpp
        src/skeleton/editcolumns.h
        src/skeleton/edittreeview.cpp
        src/skeleton/edittreeview.h
        src/skeleton/editview.cpp
        src/skeleton/editview.h
        src/skeleton/editviewdialog.h
        src/skeleton/entry.cpp
        src/skeleton/entry.h
        src/skeleton/filediag.h
        src/skeleton/hpaned.cpp
        src/skeleton/hpaned.h
        src/skeleton/iconpopup.h
        src/skeleton/imgbutton.cpp
        src/skeleton/imgbutton.h
        src/skeleton/imgtogglebutton.cpp
        src/skeleton/imgtogglebutton.h
        src/skeleton/imgtoggletoolbutton.cpp
        src/skeleton/imgtoggletoolbutton.h
        src/skeleton/imgtoolbutton.cpp
        src/skeleton/imgtoolbutton.h
        src/skeleton/jdtoolbar.cpp
        src/skeleton/jdtoolbar.h
        src/skeleton/label_entry.cpp
        src/skeleton/label_entry.h
        src/skeleton/loadable.cpp
        src/skeleton/loadable.h
        src/skeleton/lockable.h
        src/skeleton/login.cpp
        src/skeleton/login.h
        src/skeleton/menubutton.cpp
        src/skeleton/menubutton.h
        src/skeleton/msgdiag.cpp
        src/skeleton/msgdiag.h
        src/skeleton/notebook.cpp
        src/skeleton/notebook.h
        src/skeleton/panecontrol.cpp
        src/skeleton/panecontrol.h
        src/skeleton/popupwin.cpp
        src/skeleton/popupwin.h
        src/skeleton/popupwinbase.h
        src/skeleton/prefdiag.cpp
        src/skeleton/prefdiag.h
        src/skeleton/selectitempref.cpp
        src/skeleton/selectitempref.h
        src/skeleton/spinbutton.h
        src/skeleton/tablabel.cpp
        src/skeleton/tablabel.h
        src/skeleton/tabnote.cpp
        src/skeleton/tabnote.h
        src/skeleton/tabswitchbutton.cpp
        src/skeleton/tabswitchbutton.h
        src/skeleton/tabswitchmenu.cpp
        src/skeleton/tabswitchmenu.h
        src/skeleton/textloader.cpp
        src/skeleton/textloader.h
        src/skeleton/toolbar.cpp
        src/skeleton/toolbar.h
        src/skeleton/toolbarnote.cpp
        src/skeleton/toolbarnote.h
        src/skeleton/toolmenubutton.cpp
        src/skeleton/toolmenubutton.h
        src/skeleton/tooltip.cpp
        src/skeleton/tooltip.h
        src/skeleton/treeviewbase.cpp
        src/skeleton/treeviewbase.h
        src/skeleton/undobuffer.cpp
        src/skeleton/undobuffer.h
        src/skeleton/vbox.cpp
        src/skeleton/vbox.h
        src/skeleton/view.cpp
        src/skeleton/view.h
        src/skeleton/viewnote.cpp
        src/skeleton/viewnote.h
        src/skeleton/vpaned.cpp
        src/skeleton/vpaned.h
        src/skeleton/window.cpp
        src/skeleton/window.h
        src/sound/playsound.cpp
        src/sound/playsound.h
        src/sound/soundmanager.cpp
        src/sound/soundmanager.h
        src/xml/document.cpp
        src/xml/document.h
        src/xml/dom.cpp
        src/xml/dom.h
        src/xml/domlist.cpp
        src/xml/domlist.h
        src/xml/tools.cpp
        src/xml/tools.h
        src/aamanager.cpp
        src/aamanager.h
        src/articleitemmenupref.cpp
        src/articleitemmenupref.h
        src/articleitempref.cpp
        src/articleitempref.h
        src/boardcolumnsid.h
        src/boarditemmenupref.cpp
        src/boarditemmenupref.h
        src/boarditempref.cpp
        src/boarditempref.h
        src/browserpref.h
        src/browsers.cpp
        src/browsers.h
        src/cache.cpp
        src/cache.h
        src/colorid.h
        src/command.cpp
        src/command.h
        src/command_args.h
        src/compmanager.cpp
        src/compmanager.h
        src/core.cpp
        src/core.h
        src/cssmanager.cpp
        src/cssmanager.h
        src/data_info.h
        src/dispatchmanager.cpp
        src/dispatchmanager.h
        src/dndmanager.cpp
        src/dndmanager.h
        src/environment.cpp
        src/environment.h
        src/fontcolorpref.cpp
        src/fontcolorpref.h
        src/fontid.h
        src/global.h
        src/globalabonepref.h
        src/globalabonethreadpref.h
        src/gtkmmversion.h
        src/httpcode.h
        src/iomonitor.cpp
        src/iomonitor.h
        src/jddebug.h
        src/jdversion.h
        src/linkfiltermanager.cpp
        src/linkfiltermanager.h
        src/linkfilterpref.cpp
        src/linkfilterpref.h
        src/livepref.cpp
        src/livepref.h
        src/login2ch.cpp
        src/login2ch.h
        src/loginbe.cpp
        src/loginbe.h
        src/loginp2.cpp
        src/loginp2.h
        src/main.cpp
        src/mainitempref.cpp
        src/mainitempref.h
        src/maintoolbar.cpp
        src/maintoolbar.h
        src/menuslots.cpp
        src/msgitempref.cpp
        src/msgitempref.h
        src/openurldiag.cpp
        src/openurldiag.h
        src/passwdpref.h
        src/prefdiagfactory.cpp
        src/prefdiagfactory.h
        src/privacypref.h
        src/proxypref.h
        src/searchitempref.cpp
        src/searchitempref.h
        src/searchloader.cpp
        src/searchloader.h
        src/searchmanager.cpp
        src/searchmanager.h
        src/session.cpp
        src/session.h
        src/setupwizard.cpp
        src/setupwizard.h
        src/sharedbuffer.cpp
        src/sharedbuffer.h
        src/sidebaritempref.cpp
        src/sidebaritempref.h
        src/sign.h
        src/type.h
        src/updatemanager.cpp
        src/updatemanager.h
        src/urlreplacemanager.cpp
        src/urlreplacemanager.h
        src/usrcmdmanager.cpp
        src/usrcmdmanager.h
        src/usrcmdpref.cpp
        src/usrcmdpref.h
        src/viewfactory.cpp
        src/viewfactory.h
        src/winmain.cpp
        src/winmain.h
        buildinfo.h
        config.h)

target_link_libraries(JD gtkmm-2.4)
target_link_libraries(JD gdkmm-2.4)
target_link_libraries(JD atkmm-1.6)
target_link_libraries(JD giomm-2.4)
target_link_libraries(JD pangomm-1.4)
target_link_libraries(JD glibmm-2.4)
target_link_libraries(JD cairomm-1.0)
target_link_libraries(JD sigc-2.0)
target_link_libraries(JD gtk-x11-2.0)
target_link_libraries(JD gdk-x11-2.0)
target_link_libraries(JD pangocairo-1.0)
target_link_libraries(JD atk-1.0)
target_link_libraries(JD cairo)
target_link_libraries(JD gdk_pixbuf-2.0)
target_link_libraries(JD gio-2.0)
target_link_libraries(JD pangoft2-1.0)
target_link_libraries(JD pango-1.0)
target_link_libraries(JD gobject-2.0)
target_link_libraries(JD glib-2.0)
target_link_libraries(JD fontconfig)
target_link_libraries(JD freetype)
target_link_libraries(JD gnutls)
target_link_libraries(JD gthread-2.0)
target_link_libraries(JD glib-2.0)
target_link_libraries(JD gcrypt)
target_link_libraries(JD z)
target_link_libraries(JD crypt)
target_link_libraries(JD ICE)
target_link_libraries(JD SM)
target_link_libraries(JD X11)
target_link_libraries(JD ssl)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(JD Threads::Threads)


